--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["cannavigate", "childauth", "userinput", "vuejs"]
+  "cSpell.words": ["cannavigate", "childauth", "typicode", "userinput", "vuejs"]
 }
