Creating app menu component moving navigation menu htm; and corresponding ts and css  content from app component.html  to appmenu.html

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["cannavigate", "childauth", "typicode", "userinput", "vuejs"]
+  "cSpell.words": [
+    "Appmenu",
+    "cannavigate",
+    "childauth",
+    "typicode",
+    "userinput",
+    "vuejs"
+  ]
 }
