Creating, Updating. Deleting of products installing of toaster package for notifications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
   "cSpell.words": [
+    "Addproduct",
     "Appmenu",
     "cannavigate",
     "childauth",
+    "Createproduct",
+    "dialogdata",
+    "Openpopup",
     "titlecase",
+    "Toastr",
     "typicode",
     "userinput",
     "vuejs"
